'fixed' overflow of big gear when size shrinks below large by setting overflow to hidden. Wish we could use overflow-x here, but it sets overflow-y to auto which ruins everything

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -117,6 +117,10 @@ h5 {
     padding-top: 20px;
     margin-top: 28px;
     // min-height: 330px;
+    overflow: hidden;
+    @media #{$large-up} { 
+        overflow-x: visible;
+    }
 }
 
 .promo-image {
